Update Readme file & new role base API access - ADMIN role has access to school & student APIs